uhh index.html ate your fries

--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
     <title>Pixel Beta 1</title>
-    <p>Pixel server is running.</p>
+
+    <head><link rel="stylesheet" href="style.css"></head>
+
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name">
 </html>
