--- a/index.html
+++ b/index.html
@@ -1,8 +1,37 @@
 <html>
-    <title>Pixel Beta 1</title>
+    <body>
+        <title>Pixel Beta 1</title>
 
-    <head><link rel="stylesheet" href="style.css"></head>
+        <head><link rel="stylesheet" href="style.css"></head>
 
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name">
+        <label for="name">Username:</label>
+        <input type="text" id="name" name="name">
+
+        <h1>Pixel</h1>
+
+        <script type="module">
+            // Import the functions you need from the SDKs you need
+            import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js";
+            import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-analytics.js";
+            // TODO: Add SDKs for Firebase products that you want to use
+            // https://firebase.google.com/docs/web/setup#available-libraries
+          
+            // Your web app's Firebase configuration
+            // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+            const firebaseConfig = {
+              apiKey: "AIzaSyAJc1rjnZPtO75xA5BOh_GloO7boHM8Cm0",
+              authDomain: "pixel-web-9a787.firebaseapp.com",
+              projectId: "pixel-web-9a787",
+              storageBucket: "pixel-web-9a787.appspot.com",
+              messagingSenderId: "13334724431",
+              appId: "1:13334724431:web:77c866b14e51a2793d0f3a",
+              measurementId: "G-KVECYHB0Z0"
+            };
+          
+            // Initialize Firebase
+            const app = initializeApp(firebaseConfig);
+            const analytics = getAnalytics(app);
+          </script>
+
+    </body>
 </html>
